Begins to build variable file, contructs beginning of main elements on patterns html

--- a/resources/sass/_patterns.scss
+++ b/resources/sass/_patterns.scss
@@ -1,4 +1,22 @@
 // This will style the patterns.html page. This file SHOULD NOT include global elements,
 // only specific styling that helps explain patterns visually.
 
-// It's important to be mindful of class selectors here. 
+// It's important to be mindful of class selectors here.
+
+.page--patterns {
+
+  .color-block {
+    height: 200px;
+    width: auto;
+  }
+
+  .color-block--red {
+    background-color: $red;
+  }
+
+  .color-block__titles {
+    h4 {
+      color: $med-gray;
+    }
+  }
+}
