--- a/resources/sass/helpers/_variables.scss
+++ b/resources/sass/helpers/_variables.scss
@@ -1,3 +1,30 @@
 // Variables will go here
 
-$red: #d03827;
+////////////////////////////////////////////////////////////////////////////////
+// COLORS //////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////
+
+$red: #ed1a34;
+
+$light-gray: #eaeaea;
+$med-gray: #adadad;
+$dark-gray: #cccccc;
+
+////////////////////////////////////////////////////////////////////////////////
+// TYPE ////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////
+
+// Font sizes are based on a 1.500 Scale (Perfect Fifth)
+$hero-font-size: 5.063em;
+$larger-font-size: 3.375rem;
+$large-font-size: 2.25rem;
+$medium-font-size: 1.5rem;
+$base-font-size: 1.125rem;
+$small-font-size: 1rem;
+$smaller-font-size: .667rem;
+
+$weight-light: 300;
+$weight-normal: 400;
+$weight-medium: 500;
+$weight-bold: 700;
+$weight-black: 900;
