--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,4 +1,4 @@
-// Add custom font
+// Import Fonts
 @import url(http://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700,900);
 $font-family-base: 'Roboto', sans-serif;
 
