Adds typography patterns, establishes vertical rhythm

--- a/resources/sass/_patterns.scss
+++ b/resources/sass/_patterns.scss
@@ -11,12 +11,12 @@
   }
 
   .color-block--red {
-    background-color: $red;
+    background-color: $brand-primary;
   }
 
   .color-block__titles {
     h4 {
-      color: $med-gray;
+      color: $gray;
     }
   }
 }
