--- a/resources/sass/helpers/_variables.scss
+++ b/resources/sass/helpers/_variables.scss
@@ -1,14 +1,22 @@
 // Variables will go here
+// Also overwrites bootstrap base styles, but these should be able to run independently
 
 ////////////////////////////////////////////////////////////////////////////////
 // COLORS //////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////
 
-$red: #ed1a34;
+// $gray-base:              #000 !default;
+// $gray-darker:            lighten($gray-base, 13.5%) !default; // #222
+// $gray-dark:              lighten($gray-base, 20%) !default;   // #333
+// $gray:                   lighten($gray-base, 33.5%) !default; // #555
+// $gray-light:             lighten($gray-base, 46.7%) !default; // #777
+// $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
-$light-gray: #eaeaea;
-$med-gray: #adadad;
-$dark-gray: #cccccc;
+$brand-primary:         #ed1a34;
+// $brand-success:         #5cb85c !default;
+// $brand-info:            #5bc0de !default;
+// $brand-warning:         #f0ad4e !default;
+// $brand-danger:          #d9534f !default;
 
 ////////////////////////////////////////////////////////////////////////////////
 // TYPE ////////////////////////////////////////////////////////////////////////
@@ -16,15 +24,22 @@ $dark-gray: #cccccc;
 
 // Font sizes are based on a 1.500 Scale (Perfect Fifth)
 $hero-font-size: 5.063em;
-$larger-font-size: 3.375rem;
-$large-font-size: 2.25rem;
-$medium-font-size: 1.5rem;
-$base-font-size: 1.125rem;
-$small-font-size: 1rem;
-$smaller-font-size: .667rem;
+$larger-font-size: 3.375em;
+$large-font-size: 2.25em;
+$medium-font-size: 1.5em;
+$base-font-size: 1.125em;
+$small-font-size: 1em;
+$smaller-font-size: .667em;
 
 $weight-light: 300;
 $weight-normal: 400;
 $weight-medium: 500;
 $weight-bold: 700;
 $weight-black: 900;
+
+$font-family-sans-serif:  Roboto, sans-serif;
+$font-family-serif:       Georgia, "Times New Roman", Times, serif;
+
+//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
+$font-family-monospace:   Monaco, Consolas, monospace;
+$font-family-base:        $font-family-sans-serif;
