--- a/resources/sass/main/_typography.scss
+++ b/resources/sass/main/_typography.scss
@@ -9,3 +9,35 @@
 // OL
 // UL
 // code?
+
+h1,h2,h3,h4,h5,h6 {
+  font-weight: $weight-bold;
+}
+
+h1 {
+  font-size: $larger-font-size;
+}
+
+h2 {
+  font-size: $large-font-size;
+}
+
+h3 {
+  font-size: $medium-font-size;
+}
+
+h4 {
+  font-size: $base-font-size;
+}
+
+h5 {
+  font-size: $small-font-size;
+}
+
+h6 {
+  font-size: $smaller-font-size;
+}
+
+code, kbd, pre, samp {
+  font-family: $font-family-monospace;
+}
