Builds main elements

--- a/resources/sass/_patterns.scss
+++ b/resources/sass/_patterns.scss
@@ -5,6 +5,22 @@
 
 .page--patterns {
 
+  .row {
+    border-bottom: 1px solid #eaeaea;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+  }
+
+  .section-header--h2 {
+    padding-top: 20px;
+  }
+
+  .section-header--h3 {
+    padding-top: 40px;
+  }
+
+  //////////////////////////////////////////
+
   .color-block {
     height: 200px;
     width: auto;
@@ -14,9 +30,74 @@
     background-color: $brand-primary;
   }
 
+  .color-block--black {
+    background-color: $black;
+  }
+
+  .color-block--brand-gray {
+    background-color: $brand-gray;
+  }
+
+  .color-block--blue {
+    background-color: $blue;
+  }
+
   .color-block__titles {
     h4 {
       color: $gray;
     }
   }
+
+  //////////////////////////////////////////
+
+  .headings {
+    span {
+      font-size: $hero-font-size;
+      font-weight: $weight-bold;
+    }
+  }
+
+  .font--roboto {
+    span, p {
+      font-family: $font-family-base;
+    }
+
+    span {
+      font-size: 35px;
+    }
+  }
+
+  .font--oswald {
+    span, p {
+      font-family: $font-family-decor;
+      font-weight: $weight-light;
+    }
+
+    span {
+      font-size: 35px;
+    }
+  }
+
+  .example-pairing {
+    border: 1px solid $light-gray;
+    padding: 30px 20px;
+    margin-top: 30px;
+    text-align: center;
+
+    span {
+      color: $dark-gray;
+      font-family: $font-family-decor;
+      font-size: 18px;
+      font-weight: $weight-light;
+      letter-spacing: .2rem;
+      text-transform: uppercase;
+    }
+
+    p {
+      color: $black;
+      font-size: $large-font-size;
+      font-weight: $weight-black;
+    }
+  }
+
 }
