--- a/resources/sass/helpers/_variables.scss
+++ b/resources/sass/helpers/_variables.scss
@@ -1,22 +1,19 @@
-// Variables will go here
-// Also overwrites bootstrap base styles, but these should be able to run independently
+// CTL Variables will go here
 
 ////////////////////////////////////////////////////////////////////////////////
 // COLORS //////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////
 
-// $gray-base:              #000 !default;
-// $gray-darker:            lighten($gray-base, 13.5%) !default; // #222
-// $gray-dark:              lighten($gray-base, 20%) !default;   // #333
-// $gray:                   lighten($gray-base, 33.5%) !default; // #555
-// $gray-light:             lighten($gray-base, 46.7%) !default; // #777
-// $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
+$brand-primary: #ed1a34;
+$brand-gray: #ccc;
 
-$brand-primary:         #ed1a34;
-// $brand-success:         #5cb85c !default;
-// $brand-info:            #5bc0de !default;
-// $brand-warning:         #f0ad4e !default;
-// $brand-danger:          #d9534f !default;
+$light-gray: lighten($brand-gray, 10%);
+$dark-gray: darken($brand-gray, 10%);
+
+// black is a little lighter than true black
+$black: #222;
+
+$blue: #13B7FF;
 
 ////////////////////////////////////////////////////////////////////////////////
 // TYPE ////////////////////////////////////////////////////////////////////////
@@ -37,9 +34,10 @@ $weight-medium: 500;
 $weight-bold: 700;
 $weight-black: 900;
 
-$font-family-sans-serif:  Roboto, sans-serif;
-$font-family-serif:       Georgia, "Times New Roman", Times, serif;
+$font-family-sans-serif: Roboto, sans-serif;
+$font-family-decorative: Oswald, sans-serif;
 
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Monaco, Consolas, monospace;
 $font-family-base:        $font-family-sans-serif;
+$font-family-decor:       $font-family-decorative;
