--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -3,6 +3,8 @@
 $font-family-base: 'Roboto', sans-serif;
 $font-size-base: 16px;
 
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
+
 // Import bootstrap and fontawesome
 @import "bootstrap";
 @import "font-awesome";
