--- a/resources/sass/_patterns.scss
+++ b/resources/sass/_patterns.scss
@@ -9,6 +9,11 @@
     border-bottom: 1px solid #eaeaea;
     margin-bottom: 50px;
     padding-bottom: 50px;
+
+    &.typography {
+      border-bottom: 0;
+      padding-bottom: 0;
+    }
   }
 
   .section-header--h2 {
