Adds ul styling, updates ol, adds heading classes

--- a/resources/sass/_patterns.scss
+++ b/resources/sass/_patterns.scss
@@ -13,6 +13,10 @@
     &.typography {
       border-bottom: 0;
       padding-bottom: 0;
+
+      h4 {
+        padding-bottom: 16px
+      }
     }
   }
 
