--- a/resources/sass/helpers/_variables.scss
+++ b/resources/sass/helpers/_variables.scss
@@ -5,7 +5,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 $brand-primary: #ed1a34;
-$brand-gray: #ccc;
+$brand-gray: #A9A9A9;
 
 $light-gray: lighten($brand-gray, 10%);
 $dark-gray: darken($brand-gray, 10%);
