--- a/resources/sass/main/_typography.scss
+++ b/resources/sass/main/_typography.scss
@@ -10,31 +10,31 @@
 // UL
 // code?
 
-h1,h2,h3,h4,h5,h6 {
+h1,h2,h3,h4,h5,h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-weight: $weight-bold;
 }
 
-h1 {
+h1, .h1 {
   font-size: $larger-font-size;
 }
 
-h2 {
+h2, .h2 {
   font-size: $large-font-size;
 }
 
-h3 {
+h3, .h3 {
   font-size: $medium-font-size;
 }
 
-h4 {
+h4, .h4 {
   font-size: $base-font-size;
 }
 
-h5 {
+h5, .h5 {
   font-size: $small-font-size;
 }
 
-h6 {
+h6, .h6 {
   font-size: $smaller-font-size;
 }
 
@@ -124,15 +124,39 @@ ol {
   }
 
   > li:before {
-    border-right: 2px solid $brand-gray;
     box-sizing: border-box;
     color: $brand-primary;
     content: counter(li);
     counter-increment: li;
-    font-size: $small-font-size;
+    font-size: $base-font-size;
     font-weight: $weight-black;
     left: -2em;
     padding: 0 12px;
     position: absolute;
+  }
+}
+
+ul {
+  &.styled {
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+
+    > li {
+      border-bottom: 1px solid #eaeaea;
+      color: $black;
+      font-weight: $weight-medium;
+      letter-spacing: .1rem;
+      line-height: 2rem;
+      margin: 0 0 (20px) 2em;
+      padding-bottom: 16px;
+      position: relative;
+      text-transform: uppercase;
+    }
+
+    > li:first-child {
+      padding-top: 16px;
+    }
+
   }
 }
