--- a/resources/sass/_imports.scss
+++ b/resources/sass/_imports.scss
@@ -1,11 +1,6 @@
 // Import everything we are importing
 
-// Import Fonts
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700,900);
-$font-family-base: 'Roboto', sans-serif;
-$font-size-base: 16px;
-
-@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
+@import "main/fonts";
 
 // Import bootstrap and fontawesome
 @import "bootstrap";
