Adds responsive image and circular image defaults

--- a/resources/sass/_patterns.scss
+++ b/resources/sass/_patterns.scss
@@ -62,6 +62,13 @@
 
   //////////////////////////////////////////
 
+  img.murray-placeholder {
+    height: 200px;
+    width: 200px;
+  }
+
+  //////////////////////////////////////////
+
   .headings {
     span {
       font-size: $hero-font-size;
