--- a/resources/sass/_imports.scss
+++ b/resources/sass/_imports.scss
@@ -14,6 +14,7 @@
 
 @import "components/forms";
 @import "components/message";
+@import "components/tables";
 
 // Import patterns.html styling
 @import "patterns";
