--- a/resources/sass/main/_fonts.scss
+++ b/resources/sass/main/_fonts.scss
@@ -1,5 +1,5 @@
 // Import Fonts
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700,900);
+@import url(http://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700,900,900italic);
 $font-family-base: 'Roboto', sans-serif;
 $font-size-base: 16px;
 
