--- a/resources/sass/components/_forms.scss
+++ b/resources/sass/components/_forms.scss
@@ -87,7 +87,7 @@ input[type=checkbox], input[type=radio] {
 	width: 18px;
 	height: 18px;
 	vertical-align: middle;
-	background-color: $brand-primary;
+	background-color: $light-gray;
 	color: #f3f3f3;
 	text-align: center;
 	box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
