Adds speech bubble component

--- a/resources/sass/_imports.scss
+++ b/resources/sass/_imports.scss
@@ -15,6 +15,7 @@
 @import "components/forms";
 @import "components/message";
 @import "components/tables";
+@import "components/speech-bubbles";
 
 // Import patterns.html styling
 @import "patterns";
