--- a/resources/sass/_misc.scss
+++ b/resources/sass/_misc.scss
@@ -39,6 +39,11 @@ body {
       padding-right: 2%;
     }
   }
+
+  .half--centered {
+    width: 50%;
+    margin: 0 auto;
+  }
 }
 
 .slide-actions {
