--- a/resources/sass/components/_message.scss
+++ b/resources/sass/components/_message.scss
@@ -1,8 +1,8 @@
 // message styling will go here
 
 .message {
-  background-color: #3d5664;
-  border: 1px solid darken(#3d5664, 10%);
+  background-color: $blue;
+  border: 1px solid darken($blue, 10%);
   border-radius: 3px;
   margin-bottom: 24px;
   padding: 18px 24px;
@@ -23,11 +23,55 @@
 
   button {
     background-color: transparent;
-    color: lighten(#3d5664, 10%);
+    color: lighten($blue, 10%);
     padding: 0;
     position: absolute;
     right: 24px;
     top: 10px;
+  }
+
+  button:hover {
+    color: lighten($brand-primary, 20%);
+  }
+}
+
+.message--error {
+  background-color: $brand-primary-dark;
+  border: 1px solid darken($brand-primary-dark, 5%);
+
+  p {
+    color: $off-white;
+
+    span {
+      color: $white;
+    }
+  }
+
+  button {
+    background-color: transparent;
+    color: $brand-primary;
+  }
+
+  button:hover {
+    color: lighten($brand-primary, 20%);
+  }
+}
+
+.message--warning {
+  background-color: #BAD320;
+  border: 1px solid darken(#BAD320, 10%);
+
+  p {
+    color: $off-white;
+
+    span {
+      color: $white;
+    }
+  }
+
+  button {
+    background-color: transparent;
+    color: lighten(#BAD320, 10%);
   }
 
   button:hover {
