adding in -black and -blue variables, to match other brand colors

--- a/resources/sass/helpers/_variables.scss
+++ b/resources/sass/helpers/_variables.scss
@@ -19,6 +19,10 @@ $off-white: #fefefe;
 
 $blue: #13B7FF;
 
+// Adding in brand-black and brand-blue, to match with other brand colors
+$brand-black: $black;
+$brand-blue: $blue;
+
 ////////////////////////////////////////////////////////////////////////////////
 // TYPE ////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////
