Move the :before statements for form elements to child elements so we can use @extend in Drupal.

--- a/resources/sass/components/_forms.scss
+++ b/resources/sass/components/_forms.scss
@@ -76,32 +76,36 @@ button {
   font-weight: 400;
 	cursor: pointer;
   margin: 10px 0;
+
+  &:before {
+    content: "";
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    vertical-align: middle;
+    background-color: $light-gray;
+    color: #f3f3f3;
+    text-align: center;
+    box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
+    border-radius: 3px;
+    margin-right: 3%;
+  }
+}
+
+.checkbox {
+  &:before {
+    border-radius: 3px;
+  }
+}
+
+.radio {
+  &:before {
+    border-radius: 10px;
+  }
 }
 
 input[type=checkbox], input[type=radio] {
  display:none;
-}
-
-.checkbox:before, .radio:before {
-	content: "";
-	display: inline-block;
-	width: 18px;
-	height: 18px;
-	vertical-align: middle;
-	background-color: $light-gray;
-	color: #f3f3f3;
-	text-align: center;
-	box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
-	border-radius: 3px;
-  margin-right: 3%;
-}
-
-.checkbox:before {
-	border-radius: 3px;
-}
-
-.radio:before {
-	border-radius: 10px;
 }
 
 input[type=checkbox]:checked + .checkbox:before {
