--- a/resources/sass/main/_images.scss
+++ b/resources/sass/main/_images.scss
@@ -6,6 +6,8 @@ img {
 
   &.circle-crop {
     border-radius: 100px;
+-webkit-border-radius: 100px;
+-moz-border-radius: 100px;
     object-fit: cover;
   }
 
