--- a/resources/sass/main/_fonts.scss
+++ b/resources/sass/main/_fonts.scss
@@ -1,6 +1,6 @@
 // Import Fonts
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700,900,900italic);
+@import url(//fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700,900,900italic);
 $font-family-base: 'Roboto', sans-serif;
 $font-size-base: 16px;
 
-@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
+@import url(//fonts.googleapis.com/css?family=Oswald:400,300,700);
